--- a/app-deployment.yaml
+++ b/app-deployment.yaml
@@ -17,7 +17,7 @@ spec:
     spec:
       containers:
       - name: app1
-        image: tusharthedockerguy/app:$LATEST
+        image: tusharthedockerguy/app:latest
         imagePullPolicy: Always
         ports:
         - containerPort: 8123
